<resources>
    <string name="app_name">Games</string>
    <string name="start">Start</string>
    <string name="empty"> </string>

    <string name="restartButton">Restart</string>
    <string name="backButton">Back</string>
    <string name="quitButton">Quit</string>
    <string name="exitButton">Exit</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>

    <string name="option_x">X</string>
    <string name="option_o">O</string>

    <string name="about">This app was developed by Bryan Chong. This is my first actual android app. I hope you enjoy it!</string>
    <string name="tictactoe_help">How to Play: Player 1 are "X"s and Player 2 are "O"s. Get three in a row to win!</string>
</resources>
